Another attempt to fix coveralls.io integration

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go:
 - tip
 install:
 - go get github.com/smartystreets/goconvey
+- go get github.com/axw/gocov/gocov
 - go get code.google.com/p/go.tools/cmd/cover
 - go get github.com/mattn/goveralls
 script:
